--- a/scss/our-rose/our-rose.scss
+++ b/scss/our-rose/our-rose.scss
@@ -35,12 +35,8 @@
 		border: none;
 		background-image: none;
 		background-color: #ffce22;
-		p {
-			cursor: inherit;
-			width: 120px; 
-			text-align: center; 
-			font-size: 1.875em; 
-			font-weight: 700; 
-			text-transform: uppercase;}
-	}
+		font-size: 1.875em; 
+		font-weight: 700; 
+		text-transform: uppercase;
+		text-align: center; }
 }
